--- a/index02.html
+++ b/index02.html
@@ -16,7 +16,7 @@
       Ao clicar em <strong>Documentação Bootstrap</strong> abaixo você será direcionado ao site.
    </p>
    <p>
-      Aprender a ler documentação deve fazer parte do aprendizado de todo "autodidata",<br>na minha opinião de um autodidata.
+      Aprender a ler documentação deve fazer parte do aprendizado de todo "autodidata",<br>na opinião de um autodidata.
    </p>
    <p>
       Estamos usando a documentação do bootstrap no site <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" target="_blank">Documentação Bootstrap</a>
