--- a/index02.html
+++ b/index02.html
@@ -4,13 +4,16 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Primeira Página BootStrap</title>
-   <!--Abaixo incluimos o link na tag head para o acessarmos o CSS com o bootstrap.-->
+   <!--Abaixo incluimos o link dentro da tag head para acessarmos o CSS com o bootstrap.-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
    <h1>Primeira Página com BootStrap</h1>
    <p>
       Está é uma pagina básica em Html, onde incluimos o link na tag head, <br>para acessarmos o CSS com o Bootstrap.
+   </p>
+   <p>
+      https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css
    </p>
    <p>
       Ao clicar em <strong>Documentação Bootstrap</strong> abaixo você será direcionado ao site.
@@ -21,5 +24,14 @@
    <p>
       Estamos usando a documentação do bootstrap no site <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/" target="_blank">Documentação Bootstrap</a>
    </p>
+
+   <h2>
+      Incluindo JavaScript com Bootstrap
+   </h2>
+   <p>
+      https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js
+   </p>
+   <!--Abaixo incluimos a tag Html script para acessarmos o JavaScript-->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
